force-app/main/default/objects/API_AI_Setting__c/API_AI_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Details for API.AI settings</description>
    <label>API_AI_Setting</label>
</CustomObject>