force-app/main/default/objects/API_AI_Setting__c/fields/acces_token__c.field-meta.xml
<CustomField>
    <fullName>acces_token__c</fullName>
    <label>acces_token (API AI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>