force-app/main/default/objects/API_AI_Setting__c/fields/File_Suggestion_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>File_Suggestion_Header_Text__c</fullName>
    <label>File Suggestion Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>