force-app/main/default/objects/API_AI_Setting__c/fields/Google_API_Service_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_API_Service_Account_Id__c</fullName>
    <label>Google API Service Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>