force-app/main/default/objects/API_AI_Setting__c/fields/Google_Prediction_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Google_Prediction_Project_Name__c</fullName>
    <label>Google Prediction Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>