force-app/main/default/objects/API_AI_Setting__c/fields/Meeting_Interval_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Interval_In_Days__c</fullName>
    <label>Meeting Interval (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>