force-app/main/default/objects/API_AI_Setting__c/fields/Meeting_Schedule_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Schedule_Header_Text__c</fullName>
    <label>Meeting Schedule Header Text</label>
    <type>TextArea</type>
</CustomField>