force-app/main/default/objects/API_AI_Setting__c/fields/Task_Creation_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Task_Creation_Header_Text__c</fullName>
    <label>Task Creation Header Text</label>
    <type>TextArea</type>
</CustomField>