force-app/main/default/objects/API_AI_Setting__c/fields/Update_Action_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Update_Action_Header_Text__c</fullName>
    <label>Update Action Header Text</label>
    <type>TextArea</type>
</CustomField>