force-app/main/default/objects/API_AI_Setting__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL (API AI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>