force-app/main/default/objects/API_AI_Setting__c/fields/v__c.field-meta.xml
<CustomField>
    <fullName>v__c</fullName>
    <label>v (API AI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>